# chatterbox-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
c_src/: tts_bridge.cpp  tts_bridge.h
chatterbox-cpp/: CMakeLists.txt
chatterbox-cpp/ggml/include/: ggml-opencl.h
chatterbox-cpp/include/tts-cpp/chatterbox/: engine.h
chatterbox-cpp/src/: chatterbox_engine.cpp  mtl_lang_preprocess.cpp  mtl_lang_preprocess.h  mtl_tokenizer.cpp
examples/: bench_compare.rs  synthesize.rs  tts_server.rs
src/: engine.rs  error.rs  ffi.rs  lib.rs  main.rs  server.rs
tests/: integration.rs
