[package]
name = "chatterbox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
hf-hub = "0.3.2"

[build-dependencies]
cmake = "0.1.50"
