[package]
name = "chatterbox-rs"
version = "0.2.0"
edition = "2021"
description = "Rust bindings for chatterbox.cpp TTS engine — Multilingual TTS via FFI"
repository = "https://github.com/addy-47/chatterbox-rs"
license = "MIT"

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json", "dep:futures-util", "dep:tower-http", "dep:tracing"]

[dependencies]
libc = "0.2"

# Server feature (optional)
axum = { version = "0.7", optional = true, features = ["ws"] }
tokio = { version = "1", optional = true, features = ["full"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
tracing = { version = "0.1", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.1"

[dev-dependencies]
anyhow = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
